Home page edits + About Me page

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 
 <head>
-	<title>Asana - About</title>
+	<title>Lisa Price - About</title>
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<!--[if lte IE 8]>
@@ -43,43 +43,14 @@
 			<nav class="mainMenu">
 				<ul class="clear">
 					<li><a href="index.html">home</a></li>
-					<li>
-						<a href="classes.html">About Me</a>
-						<ul>
-							<li><a href="#">outdoor</a></li>
-							<li><a href="#">yoga</a></li>
-							<li><a href="#">fitness</a></li>
-							<li class="menu-item-has-children">
-								<a href="#">training</a>
-								<ul>
-									<li><a href="#">training 1</a></li>
-									<li><a href="#">training 2</a></li>
-								</ul>
-							</li>
-						</ul>
+					<li class="current-menu-item"> 
+						<a href="about.html">About Me</a>
 					</li>
 					<li>
-						<a href="events.html">Prices</a>
-						<ul>
-							<li><a href="single-event.html">Single event</a></li>
-						</ul>
+						<a href="">Spiritual Coaching</a>
 					</li>
 					<li>
 						<a href="catalog.html">Services</a>
-						<ul>
-							<li><a href="cart.html">Cart</a></li>
-							<li><a href="cart-empty.html">Cart empty</a></li>
-							<li><a href="checkout.html">Checkout</a></li>
-							<li><a href="single-product.html">Single product</a></li>
-						</ul>
-					</li>
-					<li class="current-menu-item"><a href="about.html">Blog</a></li>
-					<li>
-						<a href="blog.html">Contact</a>
-						<ul>
-							<li><a href="single-post.html">single post</a></li>
-							<li><a href="404.html">404 page</a></li>
-						</ul>
 					</li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
@@ -100,7 +71,7 @@
 			<div class="wrapper">
 				<div class="storyItem clear">
 					<div class="storyImg">
-						<img src="images/content/story.jpg" alt="">
+						<img src="images/content/lisa_home.jpg" alt="">
 					</div>
 					<div class="storyDesc">
 						<h3>My Story</h3>
@@ -113,256 +84,11 @@
 				</div>
 			</div>
 		</div>
-		<!-- <div class="ourTeam">
-			<div class="blockTitle">meet our Team</div>
-			<div class="teamItemWrap clear">
-				<div data-userid="user_1" class="teamItem">
-					<img src="images/content/team1.jpg" alt="">
-					<div class="overlay">
-						<div class="teamItemNameWrap">
-							<h3>Morgan Romano</h3>
-						</div>
-						<p>Yoga Instructor</p>
-					</div>
-				</div>
-				<div data-userid="user_2" class="teamItem">
-					<img src="images/content/team2.jpg" alt="">
-					<div class="overlay">
-						<div class="teamItemNameWrap">
-							<h3>Morgan Romano</h3>
-						</div>
-						<p>Yoga Instructor</p>
-					</div>
-				</div>
-				<div data-userid="user_3" class="teamItem">
-					<img src="images/content/team3.jpg" alt="">
-					<div class="overlay">
-						<div class="teamItemNameWrap">
-							<h3>Morgan Romano</h3>
-						</div>
-						<p>Yoga Instructor</p>
-					</div>
-				</div>
-				<div data-userid="user_4" class="teamItem">
-					<img src="images/content/team4.jpg" alt="">
-					<div class="overlay">
-						<div class="teamItemNameWrap">
-							<h3>Morgan Romano</h3>
-						</div>
-						<p>Yoga Instructor</p>
-					</div>
-				</div>
-				<div data-userid="user_5" class="teamItem">
-					<img src="images/content/team5.jpg" alt="">
-					<div class="overlay">
-						<div class="teamItemNameWrap">
-							<h3>Morgan Romano</h3>
-						</div>
-						<p>Yoga Instructor</p>
-					</div>
-				</div>
-				<div data-userid="user_6" class="teamItem">
-					<img src="images/content/team6.jpg" alt="">
-					<div class="overlay">
-						<div class="teamItemNameWrap">
-							<h3>Morgan Romano</h3>
-						</div>
-						<p>Yoga Instructor</p>
-					</div>
-				</div>
-				<div data-userid="user_7" class="teamItem">
-					<img src="images/content/team7.jpg" alt="">
-					<div class="overlay">
-						<div class="teamItemNameWrap">
-							<h3>Morgan Romano</h3>
-						</div>
-						<p>Yoga Instructor</p>
-					</div>
-				</div>
-
-				<div id="user_1" class="teamItemDesc">
-					<div class="teamItemDescWrap">
-						<img src="images/content/team10.png" alt="" class="teamItemImg">
-						<h3>Morgan Romano</h3>
-						<p class="teamItemDescText1">Yoga Instructor</p>
-						<p class="teamItemDescText">User1 Recently I was out to dinner with a big group of colleagues,
-							chatting while we waited to be seated in a restaurant. I didn’t notice the sudden lull that
-							had come over the group until someone commented, “So we’re all doing this, huh?” Recently I
-							was out to dinner with a big group of colleagues, chatting while we waited to be seated in a
-							restaurant. </p>
-						<div class="teamItemSocial">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-pinterest"></i></a>
-						</div>
-					</div>
-					<span class="closeTeamDesc">
-						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
-							x="0px" y="0px" width="16px" height="16px" viewBox="1.5 -1 16 16"
-							enable-background="new 1.5 -1 16 16" xml:space="preserve">
-							<path fill="#C1F4E8"
-								d="M11.185 7l6.315 6.314L15.814 15L9.5 8.685L3.186 15L1.5 13.314L7.815 7L1.5 0.686L3.186-1L9.5 5.3 L15.814-1L17.5 0.686L11.185 7z" />
-						</svg>
-					</span>
-				</div>
-				<div id="user_2" class="teamItemDesc">
-					<div class="teamItemDescWrap">
-						<img src="images/content/team10.png" alt="" class="teamItemImg">
-						<h3>Morgan Romano</h3>
-						<p class="teamItemDescText1">Yoga Instructor</p>
-						<p class="teamItemDescText">User2 Recently I was out to dinner with a big group of colleagues,
-							chatting while we waited to be seated in a restaurant. I didn’t notice the sudden lull that
-							had come over the group until someone commented, “So we’re all doing this, huh?” Recently I
-							was out to dinner with a big group of colleagues, chatting while we waited to be seated in a
-							restaurant. </p>
-						<div class="teamItemSocial">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-pinterest"></i></a>
-						</div>
-					</div>
-					<span class="closeTeamDesc">
-						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
-							x="0px" y="0px" width="16px" height="16px" viewBox="1.5 -1 16 16"
-							enable-background="new 1.5 -1 16 16" xml:space="preserve">
-							<path fill="#C1F4E8"
-								d="M11.185 7l6.315 6.314L15.814 15L9.5 8.685L3.186 15L1.5 13.314L7.815 7L1.5 0.686L3.186-1L9.5 5.3 L15.814-1L17.5 0.686L11.185 7z" />
-						</svg>
-					</span>
-				</div>
-				<div id="user_3" class="teamItemDesc">
-					<div class="teamItemDescWrap">
-						<img src="images/content/team10.png" alt="" class="teamItemImg">
-						<h3>Morgan Romano</h3>
-						<p class="teamItemDescText1">Yoga Instructor</p>
-						<p class="teamItemDescText">User3 Recently I was out to dinner with a big group of colleagues,
-							chatting while we waited to be seated in a restaurant. I didn’t notice the sudden lull that
-							had come over the group until someone commented, “So we’re all doing this, huh?” Recently I
-							was out to dinner with a big group of colleagues, chatting while we waited to be seated in a
-							restaurant. </p>
-						<div class="teamItemSocial">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-pinterest"></i></a>
-						</div>
-					</div>
-					<span class="closeTeamDesc">
-						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
-							x="0px" y="0px" width="16px" height="16px" viewBox="1.5 -1 16 16"
-							enable-background="new 1.5 -1 16 16" xml:space="preserve">
-							<path fill="#C1F4E8"
-								d="M11.185 7l6.315 6.314L15.814 15L9.5 8.685L3.186 15L1.5 13.314L7.815 7L1.5 0.686L3.186-1L9.5 5.3 L15.814-1L17.5 0.686L11.185 7z" />
-						</svg>
-					</span>
-				</div>
-				<div id="user_4" class="teamItemDesc">
-					<div class="teamItemDescWrap">
-						<img src="images/content/team10.png" alt="" class="teamItemImg">
-						<h3>Morgan Romano</h3>
-						<p class="teamItemDescText1">Yoga Instructor</p>
-						<p class="teamItemDescText">User4 Recently I was out to dinner with a big group of colleagues,
-							chatting while we waited to be seated in a restaurant. I didn’t notice the sudden lull that
-							had come over the group until someone commented, “So we’re all doing this, huh?” Recently I
-							was out to dinner with a big group of colleagues, chatting while we waited to be seated in a
-							restaurant. </p>
-						<div class="teamItemSocial">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-pinterest"></i></a>
-						</div>
-					</div>
-					<span class="closeTeamDesc">
-						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
-							x="0px" y="0px" width="16px" height="16px" viewBox="1.5 -1 16 16"
-							enable-background="new 1.5 -1 16 16" xml:space="preserve">
-							<path fill="#C1F4E8"
-								d="M11.185 7l6.315 6.314L15.814 15L9.5 8.685L3.186 15L1.5 13.314L7.815 7L1.5 0.686L3.186-1L9.5 5.3 L15.814-1L17.5 0.686L11.185 7z" />
-						</svg>
-					</span>
-				</div>
-				<div id="user_5" class="teamItemDesc">
-					<div class="teamItemDescWrap">
-						<img src="images/content/team10.png" alt="" class="teamItemImg">
-						<h3>Morgan Romano</h3>
-						<p class="teamItemDescText1">Yoga Instructor</p>
-						<p class="teamItemDescText">User5 Recently I was out to dinner with a big group of colleagues,
-							chatting while we waited to be seated in a restaurant. I didn’t notice the sudden lull that
-							had come over the group until someone commented, “So we’re all doing this, huh?” Recently I
-							was out to dinner with a big group of colleagues, chatting while we waited to be seated in a
-							restaurant. </p>
-						<div class="teamItemSocial">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-pinterest"></i></a>
-						</div>
-					</div>
-					<span class="closeTeamDesc">
-						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
-							x="0px" y="0px" width="16px" height="16px" viewBox="1.5 -1 16 16"
-							enable-background="new 1.5 -1 16 16" xml:space="preserve">
-							<path fill="#C1F4E8"
-								d="M11.185 7l6.315 6.314L15.814 15L9.5 8.685L3.186 15L1.5 13.314L7.815 7L1.5 0.686L3.186-1L9.5 5.3 L15.814-1L17.5 0.686L11.185 7z" />
-						</svg>
-					</span>
-				</div>
-				<div id="user_6" class="teamItemDesc">
-					<div class="teamItemDescWrap">
-						<img src="images/content/team10.png" alt="" class="teamItemImg">
-						<h3>Morgan Romano</h3>
-						<p class="teamItemDescText1">Yoga Instructor</p>
-						<p class="teamItemDescText">User6 Recently I was out to dinner with a big group of colleagues,
-							chatting while we waited to be seated in a restaurant. I didn’t notice the sudden lull that
-							had come over the group until someone commented, “So we’re all doing this, huh?” Recently I
-							was out to dinner with a big group of colleagues, chatting while we waited to be seated in a
-							restaurant. </p>
-						<div class="teamItemSocial">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-pinterest"></i></a>
-						</div>
-					</div>
-					<span class="closeTeamDesc">
-						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
-							x="0px" y="0px" width="16px" height="16px" viewBox="1.5 -1 16 16"
-							enable-background="new 1.5 -1 16 16" xml:space="preserve">
-							<path fill="#C1F4E8"
-								d="M11.185 7l6.315 6.314L15.814 15L9.5 8.685L3.186 15L1.5 13.314L7.815 7L1.5 0.686L3.186-1L9.5 5.3 L15.814-1L17.5 0.686L11.185 7z" />
-						</svg>
-					</span>
-				</div>
-				<div id="user_7" class="teamItemDesc">
-					<div class="teamItemDescWrap">
-						<img src="images/content/team10.png" alt="" class="teamItemImg">
-						<h3>Morgan Romano</h3>
-						<p class="teamItemDescText1">Yoga Instructor</p>
-						<p class="teamItemDescText">User7 Recently I was out to dinner with a big group of colleagues,
-							chatting while we waited to be seated in a restaurant. I didn’t notice the sudden lull that
-							had come over the group until someone commented, “So we’re all doing this, huh?” Recently I
-							was out to dinner with a big group of colleagues, chatting while we waited to be seated in a
-							restaurant. </p>
-						<div class="teamItemSocial">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-pinterest"></i></a>
-						</div>
-					</div>
-					<span class="closeTeamDesc">
-						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
-							x="0px" y="0px" width="16px" height="16px" viewBox="1.5 -1 16 16"
-							enable-background="new 1.5 -1 16 16" xml:space="preserve">
-							<path fill="#C1F4E8"
-								d="M11.185 7l6.315 6.314L15.814 15L9.5 8.685L3.186 15L1.5 13.314L7.815 7L1.5 0.686L3.186-1L9.5 5.3 L15.814-1L17.5 0.686L11.185 7z" />
-						</svg>
-					</span>
-				</div>
-
-			</div>
-		</div> -->
 		<div class="ourValues">
-			<div class="blockTitle">our values</div>
+			<div class="blockTitle">My Values</div>
 			<div class="parallaxBox" data-type="parallax" data-speed="10"
 				style="background-image: url(images/content/ourValues1.jpg);">
-				<h3>impossible is nothing</h3>
+				<h3>Example 1</h3>
 			</div>
 			<div class="wrapper">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
@@ -370,7 +96,7 @@
 			</div>
 			<div class="parallaxBox" data-type="parallax" data-speed="10"
 				style="background-image: url(images/content/ourValues2.jpg);">
-				<h3>everyday practice</h3>
+				<h3>Example 2</h3>
 			</div>
 			<div class="wrapper">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
@@ -378,14 +104,14 @@
 			</div>
 			<div class="parallaxBox" data-type="parallax" data-speed="10"
 				style="background-image: url(images/content/ourValues3.jpg);">
-				<h3>live what you love</h3>
+				<h3>Example 3</h3>
 			</div>
 			<div class="wrapper">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
 					et dolore magna aliqua. Ut enim ad minim veniam.</p>
 			</div>
 		</div>
-		<div class="ourInstagram">
+		<!-- <div class="ourInstagram">
 			<div id="sb_instagram">
 				<div class="sb_instagram_header">
 					<a href="#" class="sbi_header_link">yogastudio</a>
@@ -428,7 +154,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</section>
 
 	<footer id="footer" class="clear">
@@ -439,11 +165,9 @@
 			<a href="#"><i class="fa fa-pinterest"></i></a>
 		</div>
 		<ul class="footerMenu clear">
-			<li><a href="#">Classes</a></li>
-			<li><a href="#">Events</a></li>
-			<li><a href="#">Shop</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Blog</a></li>
+			<li><a href="#">About Me</a></li>
+			<li><a href="#">Spiritual Coaching</a></li>
+			<li><a href="#">Services</a></li>
 			<li><a href="#">Contact</a></li>
 		</ul>
 		<div class="footerSubscribe">
@@ -453,7 +177,7 @@
 			</form>
 		</div>
 		<div class="copyright">
-			<p>Copyright &copy; 2015. Asana All rights reserved</p>
+			<p>Jason Nguyen</p>
 		</div>
 	</footer>
 	<div class="mobileMenu">
