--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 
 <head>
-	<title>Asana - Home</title>
+	<title>Lisa Price - Home</title>
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<!--[if lte IE 8]>
@@ -41,36 +41,14 @@
 				<ul class="clear">
 					<li class="current-menu-item"><a href="index.html">Home</a></li>
 					<li>
-						<a href="classes.html">About Me</a>
-						<ul>
-							<li><a href="#">outdoor</a></li>
-							<li><a href="#">yoga</a></li>
-							<li><a href="#">fitness</a></li>
-							<li class="menu-item-has-children">
-								<a href="#">training</a>
-								<ul>
-									<li><a href="#">training 1</a></li>
-									<li><a href="#">training 2</a></li>
-								</ul>
-							</li>
-						</ul>
+						<a href="about.html">About Me</a>
 					</li>
 					<li>
-						<a href="events.html">Prices</a>
-						<ul>
-							<li><a href="single-event.html">Single event</a></li>
-						</ul>
+						<a href="">Spiritual Coaching</a>
 					</li>
 					<li>
-						<a href="catalog.html">Services</a>
-						<ul>
-							<li><a href="cart.html">Cart</a></li>
-							<li><a href="cart-empty.html">Cart empty</a></li>
-							<li><a href="checkout.html">Checkout</a></li>
-							<li><a href="single-product.html">Single product</a></li>
-						</ul>
+						<a href="catalog.html">My Services</a>
 					</li>
-					<li><a href="about.html">Blog</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
@@ -85,9 +63,10 @@
 	<section class="container">
 		<div class="homeBxSliderWrap">
 			<div class="homeBxSlider">
-				<div class="slide active" data-slide="0" style="background-image: url(images/content/homeslide.jpg);">
+				<div class="slide active" data-slide="0" style="background-image: url(images/content/home-4.jpg);">
 					<div class="slideDesc">
 						<h2>Find Your Life Purpose<br></h2>
+						<!-- <a class="learnMoreMain" href="#">Find Your Life Purpose</a> -->
 						<a class="learnMore" href="#">learn more</a>
 					</div>
 				</div>
@@ -103,7 +82,7 @@
 			<div class="mainItem clear">
 				<!-- mainItem mainItemRight clear  - Reverse  -->
 				<div class="mainItemImg">
-					<img src="images/content/main.jpg" alt="">
+					<img src="images/content/main-2.jpg" alt="">
 				</div>
 				<div class="mainItemDesc">
 					<h3>What is Spiritual Coaching?</h3>
@@ -115,7 +94,7 @@
 			<div class="gridItemWrap clear">
 				<a href="#" class="gridItem clear">
 					<div class="gridItemImg">
-						<img src="images/content/grid.jpg" alt="">
+						<img src="images/content/lisa_home.jpg" alt="">
 					</div>
 					<div class="gridItemDesc">
 						<h3>About Lisa Price</h3>
@@ -339,11 +318,9 @@
 			<a href="#"><i class="fa fa-pinterest"></i></a>
 		</div>
 		<ul class="footerMenu clear">
-			<li><a href="#">Classes</a></li>
-			<li><a href="#">Events</a></li>
-			<li><a href="#">Shop</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Blog</a></li>
+			<li><a href="#">About Me</a></li>
+			<li><a href="#">Spiritual Coaching</a></li>
+			<li><a href="#">Services</a></li>
 			<li><a href="#">Contact</a></li>
 		</ul>
 		<div class="footerSubscribe">
@@ -359,41 +336,9 @@
 			<li class="current-menu-item"><a href="index.html">home</a></li>
 			<li>
 				<a href="classes.html">About Me</a>
-				<ul class="sub-menu">
-					<li><a href="#">Outdoor</a></li>
-					<li><a href="#">Yoga</a></li>
-					<li><a href="#">Fitness</a></li>
-					<li class="menu-item-has-children">
-						<a href="#">Training</a>
-						<ul class="sub-menu">
-							<li><a href="#">Training 1</a></li>
-							<li><a href="#">Training 2</a></li>
-						</ul>
-					</li>
-				</ul>
 			</li>
 			<li>
-				<a href="events.html">Prices</a>
-				<ul class="sub-menu">
-					<li><a href="single-event.html">Single event</a></li>
-				</ul>
-			</li>
-			<li>
-				<a href="catalog.html">Services</a>
-				<ul class="sub-menu">
-					<li><a href="cart.html">Cart</a></li>
-					<li><a href="cart-empty.html">Cart empty</a></li>
-					<li><a href="checkout.html">Checkout</a></li>
-					<li><a href="single-product.html">Single product</a></li>
-				</ul>
-			</li>
-			<li><a href="about.html">Blog</a></li>
-			<li>
-				<a href="blog.html">Contact</a>
-				<ul class="sub-menu">
-					<li><a href="single-post.html">Single post</a></li>
-					<li><a href="404.html">404 page</a></li>
-				</ul>
+				<a href="events.html">Services</a>
 			</li>
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
