Header changes + Events Photo

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 						<a href="">Spiritual Coaching</a>
 					</li>
 					<li>
-						<a href="catalog.html">Services</a>
+						<a href="events.html">Services</a>
 					</li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
@@ -165,10 +165,10 @@
 			<a href="#"><i class="fa fa-pinterest"></i></a>
 		</div>
 		<ul class="footerMenu clear">
-			<li><a href="#">About Me</a></li>
+			<li><a href="about.html">About Me</a></li>
 			<li><a href="#">Spiritual Coaching</a></li>
-			<li><a href="#">Services</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="events.html">Services</a></li>
+			<li><a href="contact.html">Contact</a></li>
 		</ul>
 		<div class="footerSubscribe">
 			<form>
