--- a/events.html
+++ b/events.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 
 <head>
-	<title>Asana - Events</title>
+	<title>Lisa Price - Events</title>
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<!--[if lte IE 8]>
@@ -39,42 +39,16 @@
 				<ul class="clear">
 					<li><a href="index.html">home</a></li>
 					<li>
-						<a href="classes.html">About Me</a>
-						<ul>
-							<li><a href="#">outdoor</a></li>
-							<li><a href="#">yoga</a></li>
-							<li><a href="#">fitness</a></li>
-							<li class="menu-item-has-children">
-								<a href="#">training</a>
-								<ul>
-									<li><a href="#">training 1</a></li>
-									<li><a href="#">training 2</a></li>
-								</ul>
-							</li>
-						</ul>
+						<a href="about.html">About Me</a>
+					</li>
+					<li>
+						<a href="">Spiritual Coaching</a>
 					</li>
 					<li class="current-menu-item">
-						<a href="events.html">Prices</a>
-						<ul>
-							<li><a href="single-event.html">Single event</a></li>
-						</ul>
+						<a href="events.html">Services</a>
 					</li>
-					<li>
-						<a href="catalog.html">Services</a>
-						<ul>
-							<li><a href="cart.html">Cart</a></li>
-							<li><a href="cart-empty.html">Cart empty</a></li>
-							<li><a href="checkout.html">Checkout</a></li>
-							<li><a href="single-product.html">Single product</a></li>
-						</ul>
-					</li>
-					<li><a href="about.html">Blog</a></li>
 					<li>
 						<a href="blog.html">Contact</a>
-						<ul>
-							<li><a href="single-post.html">single post</a></li>
-							<li><a href="404.html">404 page</a></li>
-						</ul>
 					</li>
 				</ul>
 			</nav>
@@ -176,15 +150,7 @@
 				
 				<span class="showMoreEvents">show more</span>
 			</div>
-			<div class="subscribeBox" style="background-image: url(images/content/subscribe.jpg);">
-				<i class="iconEmail"></i>
-				<h3>subscribe to our newsletter</h3>
-				<p>Subscribe and take all information about our latest events</p>
-				<form class="clear">
-					<input class="" type="text" name="" size="20" value="" placeholder="Your email ">
-					<input class="subscribeSubmit" type="submit" value="subscribe">
-				</form>
-			</div>
+
 		</div>
 
 	</section>
@@ -196,12 +162,10 @@
 			<a href="#"><i class="fa fa-pinterest"></i></a>
 		</div>
 		<ul class="footerMenu clear">
-			<li><a href="#">Classes</a></li>
-			<li><a href="#">Events</a></li>
-			<li><a href="#">Shop</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Blog</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="about.html">About Me</a></li>
+			<li><a href="#">Spiritual Coaching</a></li>
+			<li><a href="events.html">Services</a></li>
+			<li><a href="contact.html">Contact</a></li>
 		</ul>
 		<div class="footerSubscribe">
 			<form>
@@ -210,7 +174,7 @@
 			</form>
 		</div>
 		<div class="copyright">
-			<p>Copyright &copy; 2015. Asana All rights reserved</p>
+			<p>Jason Nguyen</p>
 		</div>
 	</footer>
 	<div class="mobileMenu">
