--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<a href="">Spiritual Coaching</a>
 					</li>
 					<li>
-						<a href="catalog.html">My Services</a>
+						<a href="events.html">My Services</a>
 					</li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
@@ -335,10 +335,10 @@
 		<ul>
 			<li class="current-menu-item"><a href="index.html">home</a></li>
 			<li>
-				<a href="classes.html">About Me</a>
+				<a href="about.html">About Me</a>
 			</li>
 			<li>
-				<a href="events.html">Services</a>
+				<a href="classes.html">Services</a>
 			</li>
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
