--- a/about.html
+++ b/about.html
@@ -85,9 +85,9 @@
 			</div>
 		</div>
 		<div class="ourValues">
-			<div class="blockTitle">My Values</div>
+			<div class="blockTitle">Testimonials</div>
 			<div class="parallaxBox" data-type="parallax" data-speed="10"
-				style="background-image: url(images/content/ourValues1.jpg);">
+				style="background-image: url(images/content/home-3.jpg);">
 				<h3>Example 1</h3>
 			</div>
 			<div class="wrapper">
@@ -95,7 +95,7 @@
 					et dolore magna aliqua. Ut enim ad minim veniam.</p>
 			</div>
 			<div class="parallaxBox" data-type="parallax" data-speed="10"
-				style="background-image: url(images/content/ourValues2.jpg);">
+				style="background-image: url(images/content/home-2.jpg);">
 				<h3>Example 2</h3>
 			</div>
 			<div class="wrapper">
@@ -103,7 +103,7 @@
 					et dolore magna aliqua. Ut enim ad minim veniam.</p>
 			</div>
 			<div class="parallaxBox" data-type="parallax" data-speed="10"
-				style="background-image: url(images/content/ourValues3.jpg);">
+				style="background-image: url(images/content/home-3.jpg);">
 				<h3>Example 3</h3>
 			</div>
 			<div class="wrapper">
