--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			<div class="mainItem clear">
 				<!-- mainItem mainItemRight clear  - Reverse  -->
 				<div class="mainItemImg">
-					<img src="images/content/main-2.jpg" alt="">
+					<img src="images/content/main-3.jpg" alt="">
 				</div>
 				<div class="mainItemDesc">
 					<h3>What is Spiritual Coaching?</h3>
@@ -92,14 +92,16 @@
 				</div>
 			</div>
 			<div class="gridItemWrap clear">
-				<a href="#" class="gridItem clear">
+				<a href="about.html" class="gridItem clear">
 					<div class="gridItemImg">
 						<img src="images/content/lisa_home.jpg" alt="">
 					</div>
 					<div class="gridItemDesc">
 						<h3>About Lisa Price</h3>
-						<p>Lisa Price is a trained spiritual consultant, mentor, philosopher and teacher. She is trained by the Life Purpose
-							Insitute to be a spiritual coach and has a Master's degree in Philosophy from University of Nevada, Reno.
+						<p>Lisa Price is a trained spiritual consultant, mentor, philosopher and teacher. She is trained
+							by the Life Purpose
+							Insitute to be a spiritual coach and has a Master's degree in Philosophy from University of
+							Nevada, Reno.
 						</p>
 						<span class="viewMore">view more
 							<i>
@@ -115,13 +117,14 @@
 						</span>
 					</div>
 				</a>
-				<a href="#" class="gridItem gridItemWhite clear">
+				<a href="events.html" class="gridItem gridItemWhite clear">
 					<div class="gridItemImg">
 						<img src="images/content/grid2.jpg" alt="">
 					</div>
 					<div class="gridItemDesc">
 						<h3>My Services</h3>
-						<p>Learn more about my offerings and services and how it can serve you to finding your life purpose.
+						<p>Learn more about my offerings and services and how it can serve you to finding your life
+							purpose.
 						</p>
 						<span class="viewMore">view more
 							<i>
@@ -302,11 +305,10 @@
 				</div>
 			</div>
 		</div> -->
-		<div class="classesBox" data-type="parallax" data-speed="10"
-			><!--style="background-image: url(images/content/bg-classes.jpg);"-->
-			<!-- <a href="#" class="classesCategory">classes</a> -->
-			<h3>choose your classes and start <br> your training</h3>
-			<a href="#" class="viewClasses">view classes</a>
+		<div class="classesBox" data-type="parallax" data-speed="10" style="background-image: url(images/content/events-2.jpg);">
+				<a href="#" class="classesCategory">Services</a>
+				<h3>choose your classes and start <br> your training</h3>
+				<a href="#" class="viewClasses">view services</a>
 		</div>
 	</section>
 
