--- a/events.html
+++ b/events.html
@@ -61,7 +61,7 @@
 		</div>
 	</header>
 	<section class="container">
-		<div class="pageHeader" style="background-image: url(images/content/events.jpg);">
+		<div class="pageHeader" style="background-image: url(images/content/events-2.jpg);">
 			<h1>My Services</h1>
 		</div>
 		<div class="contentWrap">
