Spiritual coaching page, images, header fixes

--- a/about.html
+++ b/about.html
@@ -43,11 +43,11 @@
 			<nav class="mainMenu">
 				<ul class="clear">
 					<li><a href="index.html">home</a></li>
-					<li class="current-menu-item"> 
+					<li class="current-menu-item">
 						<a href="about.html">About Me</a>
 					</li>
 					<li>
-						<a href="">Spiritual Coaching</a>
+						<a href="spiritual.html">Spiritual Coaching</a>
 					</li>
 					<li>
 						<a href="events.html">Services</a>
@@ -73,13 +73,16 @@
 					<div class="storyImg">
 						<img src="images/content/lisa_home.jpg" alt="">
 					</div>
-					<div class="storyDesc">
+					<div class="aboutDesc">
 						<h3>My Story</h3>
-						<p>Born and raised in XXX, I've always felt compelled to put others before me from a young age. I was lucky to find my passion
-							for spirituality and helping others early. This quickly moved me to be trained by the Life Purpose Insitute and complete my
+						<p>Born and raised in XXX, I've always felt compelled to put others before me from a young age.
+							I was lucky to find my passion
+							for spirituality and helping others early. This quickly moved me to be trained by the Life
+							Purpose Insitute and complete my
 							Master's degree in Philosophy from he University of Nevada, Reno.
 						</p>
-						<p>I'm a deeply spiritual women and I've made it my life purpose to help others live happier, peaceful lives.</p>
+						<p>I'm a deeply spiritual women and I've made it my life purpose to help others live happier,
+							peaceful lives.</p>
 					</div>
 				</div>
 			</div>
@@ -88,11 +91,13 @@
 			<div class="blockTitle">Testimonials</div>
 			<div class="parallaxBox" data-type="parallax" data-speed="10"
 				style="background-image: url(images/content/home-3.jpg);">
-				<h3>Example 1</h3>
+				<h3>"She has helped me realize my own personal blockers..."</h3>
 			</div>
 			<div class="wrapper">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-					et dolore magna aliqua. Ut enim ad minim veniam.</p>
+				<p>I've had the priviledge of meeting with Lisa for multiple spiritual coaching session and I've always
+					left each session feeling so much better and lighter
+					than before - Linda Sellars
+				</p>
 			</div>
 			<div class="parallaxBox" data-type="parallax" data-speed="10"
 				style="background-image: url(images/content/home-3.jpg);">
