--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 						<a href="about.html">About Me</a>
 					</li>
 					<li>
-						<a href="">Spiritual Coaching</a>
+						<a href="spiritual.html">Spiritual Coaching</a>
 					</li>
 					<li>
 						<a href="events.html">Services</a>
@@ -62,7 +62,7 @@
 	</header>
 	<section class="container">
 		<div class="pageHeader" style="background-image: url(images/content/bg-parallax2.jpg);">
-			<h1>you are welcome</h1>
+			<h1>Contact</h1>
 		</div>
 		<div class="ourContact">
 			<div class="wrapper clear">
