--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 						<a href="about.html">About Me</a>
 					</li>
 					<li>
-						<a href="">Spiritual Coaching</a>
+						<a href="spiritual.html">Spiritual Coaching</a>
 					</li>
 					<li>
-						<a href="events.html">My Services</a>
+						<a href="events.html">Services</a>
 					</li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
