added message for anchor links

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<div class="slideDesc">
 						<h2>Find Your Life Purpose<br></h2>
 						<!-- <a class="learnMoreMain" href="#">Find Your Life Purpose</a> -->
-						<a class="learnMore" href="#">learn more</a>
+						<a class="learnMore" href="spiritual.html">learn more</a>
 					</div>
 				</div>
 				<!-- <div class="slide" data-slide="1" style="background-image: url(images/content/homeslide2.jpg);">
@@ -88,7 +88,7 @@
 					<h3>What is Spiritual Coaching?</h3>
 					<p>Spiritual coaching guides you to find inner happiness, peace and harmony. You will embark on a
 						jouney in developing a sense of empowwerment and understand your true purpose.</p>
-					<a href="#" class="viewMore">view more</a>
+					<a href="spiritual.html" class="viewMore">view more</a>
 				</div>
 			</div>
 			<div class="gridItemWrap clear">
